<resources>
    <string name="app_name">Tetris</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_preferencias">Configuración</string>

    <string name="texto_puntuacion">Puntuación:</string>
    <string name="texto_tiempo">Tiempo:</string>
    <string name="texto_nivel">Nivel:</string>
    <string name="title_activity_tetris">Tetris</string>
    <string name="texto_selecciona_volumen">Volumen de la música del juego</string>
    <string name="texto_selecciona_volumen_efectos">Volumen de los efectos sonoros</string>
    <string name="texto_cancelar">Cancelar</string>
    <string name="texto_OK">OK</string>
    <string name="texto_pausa">PAUSA</string>

    <string name="texto_jugar">Jugar</string>
    <string name="texto_reanudar">Reanudar</string>
    <string name="texto_configuracion">Configuración</string>
    <string name="texto_salir">Salir</string>

    <string name="categoria_sonidos">Sonidos</string>
    <string name="categoria_volumen">Volúmenes</string>

    <string name="titulo_cb_musica">Reproducir música del juego del tetris</string>
    <string name="descripcion_cb_musica">Se reproducen la música de fondo del juego del tetris</string>
    <string name="titulo_cb_efectos">Reproducir efectos sonoros del juego</string>
    <string name="descripcion_cb_efectos">Se reproducen los efectos de sonido, choque de piezas, game over...</string>
    <string name="titulo_volumen_musica">Volumen de la música del juego</string>
    <string name="descripcion_volumen_musica">Elige el % del volumen de la música del juego</string>
    <string name="titulo_volumen_efectos">Volumen de los efectos sonoros</string>
    <string name="descripcion_volumen_efectos">Elige el % del volumen de los efectos del juego</string>
</resources>
