<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/fondoinicio"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical">


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_jugar"
        android:textColor="@color/verde"
        android:shadowColor="@color/rojo"
        android:shadowRadius="2"
        android:id="@+id/bJugar" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_configuracion"
        android:textColor="@color/morado"
        android:shadowColor="@color/rojo"
        android:shadowRadius="2"
        android:id="@+id/bConfiguracion" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_salir"
        android:id="@+id/bSalirApp"
        android:shadowColor="@color/rojo"
        android:shadowRadius="2"
        android:textColor="@color/azul" />
</LinearLayout>


