<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#50000000">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:gravity="center_vertical|center_horizontal"
        android:layout_centerInParent="true">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/fondo_pausa">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/texto_pausa"
                android:id="@+id/textView6"
                android:layout_gravity="center_horizontal"
                style="@style/estiloLetraPausa" />
        </FrameLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="80dp"
            android:background="#fff"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/texto_reanudar"
                android:id="@+id/bReanudar"
                android:layout_weight="1"
                android:background="#fff" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/texto_configuracion"
                android:id="@+id/bConfiguracionPause"
                android:layout_weight="1"
                android:background="#fff" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/texto_salir"
                android:id="@+id/bSalir"
                android:layout_weight="1"
                android:background="#fff" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>